fix(card-style): fix windows default scrollbar

--- a/packages/owldex/src/components/card-details/card-details.module.css
+++ b/packages/owldex/src/components/card-details/card-details.module.css
@@ -4,7 +4,7 @@
   width: calc(100% - 30px);
   max-width: 400px;
   height: min-content;
-  overflow: scroll;
+  overflow: auto;
   max-height: 100%;
   z-index: 3;
   border: 1px solid #ccc;
