--- a/packages/owldex/src/components/card-list/card-list.module.css
+++ b/packages/owldex/src/components/card-list/card-list.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  overflow: scroll;
+  overflow: auto;
   height: 100%;
 }
 
